# cmake_template

./: .gitignore  CMakeLists.txt  readme.md
cmake_c_template/: CMakeLists.txt
cmake_c_template/src/: main.c
cmake_cpp_template/: CMakeLists.txt
cmake_simple_template/: CMakeLists.txt  main.c  main.cpp
cmake_template/: CMakeLists.txt
cmake_template/src/: main.cpp
src/example_exe/: CMakeLists.txt
src/example_header_only_lib/: CMakeLists.txt  README.md
src/example_header_only_lib/include/example_header_only_lib/: hello.hpp
src/example_lib/: CMakeLists.txt  README.md
src/example_lib/include/example_lib/: hello.hpp
src/example_lib/src/: hello.cpp
